syntax="proto3";
package pb;
import "google/protobuf/timestamp.proto";
   
option go_package="./proto";


message RegistraionRequest{
    string username=1;
    string password=2;
    string full_name =3;
	string email =4;
	google.protobuf.Timestamp create_at =5;
	google.protobuf.Timestamp updated_at =6;
	
}
message RegistraionResponse{
    string message=1;
}
message getReg{
    string username=1;
    string password=2;
}
